--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "popup": "^0.0.3",
+    "popups": "^1.1.3",
     "razorpay": "^2.9.2"
   }
 }
